# tao-not-42

./: .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml
docs/: architecture.md  overview.md
docs/architecture/: model_structure_v1_1.md  model_usage_calculation.md  offline_training_dataflow.md
docs/assets/: kaykit_assets.md  quaternius_modular_sci_fi_megakit.md
docs/references/: model_literature.md
src/tao_not_42/: __init__.py
stelle-env/: icon.svg.import  project.godot
stelle-env/assets/blender_source/: generate_wall_middle_segment_geo.py  wall_middle_segment_geo.blend  wall_middle_segment_geo.blend1
stelle-env/assets/material/: stone_embedded_tiles.tres  wall_blue_painted_concrete.tres  wall_concrete_panel_3x3.tres
stelle-env/assets/sci-lowpoly/texture/: concrete_tiles_02_1k.material  granite_tile_04_1k.material  granite_tile_04_1k.material.depren  granite_tile_04_2k.material  granite_tile_04_2k.material.depren  granite_tile_dark_1k.material  granite_tile_dark_1k.material.depren
stelle-env/scenes/: environment.tscn  main.tscn  preview_capture.tscn  scifi_arena.tscn  scifi_preview_capture.tscn  scifi_preview_capture_hires.tscn  screenshot_capture.tscn  test_sence_1.tscn
stelle-env/scripts/: procedural_room_generator.gd  procedural_room_generator.gd.uid  save_viewport_screenshot.gd  save_viewport_screenshot.gd.uid  scifi_arena_generator.gd  scifi_arena_generator.gd.uid
