[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tao-not-42"
version = "0.1.0"
description = "Staged embodied agent training skeleton for TAO-NOT-42."
readme = "docs/overview.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
